--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<html>
+  <head>
+    <title>Милана Охремчук</title>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+  <body>
+    <header>
+      <h2>Охремчук Милана</h2>
+    </header>
+    <main>
+      <nav>
+        <a class="link-nav" href="about.html"><b>Обо мне.</b></a>
+        <a class="link-nav" href="info.html"><b>Полезная информация.</b></a>
+      </nav>
+      <h1>Web-sites.<br/> developer.</h1>
+      <h2> Что я умею? </h2>
+      <p>Создавать сайты в Tilda</p>
+      <p>Создавать прототипы в Figma</p>
+      <p>Красиво оформлять сайты</p>
+      <div class= "pon">
+      <img src="https://img.freepik.com/free-vector/designers-are-working-on-the-desing-of-web-page-web-design-user-interface-and-user-experience-content-organization_335657-4403.jpg" width="830px" height="550px"/>
+      </div>
+    </main>
+    <footer>
+      <a class="social" href="https://vk.com/lanochka_meow1"><img src="https://backoffice.algoritmika.org/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="https://backoffice.algoritmika.org/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
+    </footer>
+  </body>
+</html>
